@@ -12,6 +12,7 @@ package org.eclipse.hawkbit.ui;
 import static feign.Util.ISO_8859_1;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Base64;
 import java.util.Collections;
@@ -55,15 +56,19 @@ public class HawkbitUiApp implements AppShellConfigurator {
 
     private static final String AUTHORIZATION_HEADER = "Authorization";
     private static final RequestInterceptor AUTHORIZATION = requestTemplate -> {
-        final Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (authentication.getPrincipal() instanceof OidcUser oidcUser) {
-            requestTemplate.header(AUTHORIZATION_HEADER, "Bearer " + oidcUser.getIdToken().getTokenValue());
-        } else {
+        final Authentication authentication = Objects.requireNonNull(
+                SecurityContextHolder.getContext().getAuthentication(), "No authentication available in security context!");
+        final Object principal = Objects.requireNonNull(authentication.getPrincipal(), "User is null!");
+        if (principal instanceof OidcUser oidcUser) {
             requestTemplate.header(
-                    AUTHORIZATION_HEADER, "Basic " + Base64.getEncoder().encodeToString(
-                            (Objects.requireNonNull(authentication.getPrincipal(), "User is null!") + ":" + Objects.requireNonNull(
-                                    authentication.getCredentials(), "Password is not available!")).getBytes(ISO_8859_1))
-            );
+                    AUTHORIZATION_HEADER,
+                    "Bearer " + oidcUser.getIdToken().getTokenValue());
+        } else {
+            final String user = String.valueOf(principal);
+            final Object pass = Objects.requireNonNull(authentication.getCredentials(), "Password is not available!");
+            requestTemplate.header(
+                    AUTHORIZATION_HEADER,
+                    "Basic " + Base64.getEncoder().encodeToString((user + ":" + pass).getBytes(ISO_8859_1)));
         }
     };
 
@@ -79,19 +84,13 @@ public class HawkbitUiApp implements AppShellConfigurator {
     }
 
     @Bean
-    HawkbitClient hawkbitClient(
-            final HawkbitServer hawkBitServer,
-            final Encoder encoder,
-            final Decoder decoder,
-            final Contract contract
-    ) {
+    HawkbitClient hawkbitClient(final HawkbitServer hawkBitServer, final Encoder encoder, final Decoder decoder, final Contract contract) {
         return new HawkbitClient(
                 hawkBitServer, encoder, decoder, contract,
                 ERROR_DECODER,
                 (tenant, controller) -> controller == null
                         ? AUTHORIZATION
-                        : HawkbitClient.DEFAULT_REQUEST_INTERCEPTOR_FN.apply(tenant, controller)
-        );
+                        : HawkbitClient.DEFAULT_REQUEST_INTERCEPTOR_FN.apply(tenant, controller));
     }
 
     @Bean
@@ -115,8 +114,7 @@ public class HawkbitUiApp implements AppShellConfigurator {
 
                 @Override
                 public void eraseCredentials() {
-                    // don't erase credentials because they will be used
-                    // to authenticate to the hawkBit update server / mgmt server
+                    // don't erase credentials because they will be used to authenticate to the hawkBit update server / mgmt server
                 }
             };
         };
@@ -124,7 +122,7 @@ public class HawkbitUiApp implements AppShellConfigurator {
 
     public static boolean isAuthenticated(String username, String password, String mgmtUrl) {
         try {
-            final URL url = new URL(mgmtUrl + "/rest/v1/rollouts");
+            final URL url = new URI(mgmtUrl + "/rest/v1/rollouts").toURL();
             final HttpURLConnection conn = (HttpURLConnection) url.openConnection();
             conn.setRequestMethod("GET");
 
